fix: sidebar logo not aligned with different version length

--- a/ui/src/app/sidebar/sidebar.scss
+++ b/ui/src/app/sidebar/sidebar.scss
@@ -33,10 +33,11 @@ $deselected-text: #818d94;
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
+        justify-content: flex-end;
         font-size: 24px;
         font-weight: 500;
         margin: 1em 0;
-        margin-left: 7px;
+        margin-left: -7px;
 
         &__character {
             width: 42px;
@@ -51,7 +52,7 @@ $deselected-text: #818d94;
     &__version {
         cursor: pointer;
         width: 100%;
-        text-align: center;
+        text-align: left;
     }
 
     &__nav-item {
@@ -90,7 +91,7 @@ $deselected-text: #818d94;
     &__collapse-button {
         text-align: center;
         cursor: pointer;
-        margin-left: 15px;
+        margin-left: auto;
         margin-bottom: 1em;
         font-size: 20px;
         color: $deselected-text;
